# facad

./: .editorconfig  .gitconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.h.in  genindex.html  index.html  meson.build  objects.inv  search.html
_images/: main_8c.xml
_static/: custom.css
docs/man/: facad.1
docs/source/: conf.py
doxygen/: Doxyfile
doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
doxygen/html/d0/d29/: main_8c.html  main_8c.js  main_8c_source.html  (+22 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+15 more)
doxygen/latex/: annotated.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  refman.tex
doxygen/xml/: Doxyfile.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml
src/: args_parser.c  args_parser.h  dev_dir_utils.c  dev_dir_utils.h  dev_utils.c  dev_utils.h  dir_analytics.c  dir_analytics.h  dir_config.c  dir_config.h  directory_config.c  directory_config.h  dirinfo.c  dirinfo.h  display_utils.c  display_utils.h  display_utils.rs  emoji_extensions.c  emoji_extensions.h  emoji_mappings.c  emoji_mappings.h  emoji_utils.c  emoji_utils.h  emoji_utils.rs  file_card.c  file_card.h  file_entry.c  file_entry.h  file_entry.rs  git_integration.c  git_integration.h  git_utils.c  git_utils.h  longlisting.c  longlisting.h  main.c  main.rs
(+504 files in other folders)
